# vayu

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  architecture_analysis.ipynb  benchmark_decode.py  ml-explore-mlx-examples-43aa96d2f4ee613f.txt  mustafaaljadery-lightning-whisper-mlx-8a5edab282632443.txt  pyproject.toml  transcribe_demo.ipynb  vad_benchmark.ipynb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: test.srt  test2.srt
tests/: __init__.py
todos/: API-001-pending-p3-dual-api-confusion.md  ARCH-001-closed-p2-circular-import.md  ARCH-001-pending-p2-circular-import.md  ARCH-002-closed-p2-monolithic-transcribe.md  ARCH-002-pending-p2-monolithic-transcribe.md  ARCH-003-pending-p2-duplicate-code.md  BUG-001-pending-p1-timing-import-error.md  ERR-001-pending-p2-missing-input-validation.md  ERR-002-closed-p2-bare-exceptions-cli.md  ERR-002-pending-p2-bare-exceptions-cli.md  PERF-001-closed-p2-missing-mx-compile.md  PERF-001-pending-p2-missing-mx-compile.md  PERF-002-closed-p2-gpu-cpu-transfers.md  PERF-002-pending-p2-gpu-cpu-transfers.md  QUAL-001-pending-p3-missing-type-hints.md  QUAL-002-pending-p3-magic-numbers.md  SEC-001-pending-p1-command-injection-ffmpeg.md  SEC-002-pending-p1-path-traversal-model-loading.md
todos/implemented/: API-001-closed-p3-dual-api-confusion.md  ARCH-003-closed-p2-duplicate-code.md  ERR-001-closed-p2-missing-input-validation.md  QUAL-001-closed-p3-missing-type-hints.md  QUAL-002-closed-p3-magic-numbers.md
whisper_mlx/: __init__.py  audio.py  cli.py  decoding.py  lightning.py  load_models.py  speculative.py  timing.py  transcribe.py
whisper_mlx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
