[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vayu-whisper"
version = "1.0.0"
description = "The fastest Whisper speech-to-text on Apple Silicon. 3-5x faster transcription via MLX batched decoding on M1/M2/M3/M4 Macs."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Apple Inc."},
    {name = "Mustafa Aljadery"},
    {name = "Siddharth Sharma"},
    {name = "Behnam Ebrahimi"},
]
keywords = [
    "whisper",
    "speech-to-text",
    "transcription",
    "speech-recognition",
    "mlx",
    "apple-silicon",
    "stt",
    "asr",
    "audio-transcription",
    "macos",
    "m1",
    "m2",
    "m3",
    "m4",
    "batched-decoding",
    "word-timestamps",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.11",
    "numpy",
    "tqdm",
    "tiktoken",
    "huggingface_hub",
    "numba",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]
notebook = [
    "ipykernel",
    "jupyter",
]

[project.scripts]
vayu = "whisper_mlx.cli:main"
whisper-mlx = "whisper_mlx.cli:main"  # Backward compatibility

[project.urls]
Homepage = "https://github.com/CodeWithBehnam/vayu"
Documentation = "https://github.com/CodeWithBehnam/vayu#readme"
Repository = "https://github.com/CodeWithBehnam/vayu"
Issues = "https://github.com/CodeWithBehnam/vayu/issues"
Changelog = "https://github.com/CodeWithBehnam/vayu/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["whisper_mlx*"]

[tool.setuptools.package-data]
whisper_mlx = ["assets/*.npz", "assets/*.tiktoken"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "psutil>=7.2.1",
    "pytest>=9.0.2",
]
